Remove node associated to an alias on node stash
Signed-off-by: Franck LECUYER <franck.lecuyer@rte-france.com>